# PCB_Preview

./: pyproject.toml
esp32/: platformio.ini
esp32/include/: laser.h  motion.h
esp32/src/: gcode.cpp  laser.cpp  main.cpp  motion.cpp  wifi_server.cpp
gerbers/: Arduino Nano IO Shield-B_Cu.gbr  Arduino Nano IO Shield-F_Cu.gbr  SolderingIron-F_Cu.gbr
parser/: gerber_preview.py  parse_gerber.py  raster_generator.py
templates/: preview.html
tests/: test_gcode_pipeline.py
